--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,8 @@ spring.thymeleaf.content-type=text/html
 spring.thymeleaf.cache=false
 
 spring.datasource.url=jdbc:mysql://127.0.0.1/player?characterEncoding=UTF-8&autoReconnect=true&useSSL=false
-spring.datasource.username=root
-spring.datasource.password=d9d2j9w2
+spring.datasource.username=
+spring.datasource.password=
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 
 spring.datasource.max-active=5
